--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
    "version": "0.1.0",
    "private": true,
    "dependencies": {
+      "get-video-id": "^3.1.0",
       "react": "^16.8.3",
       "react-dom": "^16.8.3",
       "react-scripts": "2.1.5",
